devops/base/prod/api/deploy.yaml
# Copyright 2021 The Province of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: timemachine
  name: api
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: timemachine
      component: api
  strategy:
    type: RollingUpdate
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
  template:
    metadata:
      labels:
        app: timemachine
        role: api
        component: api
    spec:
      containers:
      - name: timemachine-api
        image: image-registry.openshift-image-registry.svc:5000/ed57f0-tools/timemachine-api-prod:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 2G
          requests:
            cpu: 100m
            memory: 1G
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: timemachine
  name: api
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: timemachine
    component: api
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: timemachine
    component: api
  name: api
  annotations:
    haproxy.router.openshift.io/timeout: 90s
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    terminationc: edge
  to:
    kind: Service
    name: api
    weight: 100
